# orpheus

./: .gitmodules  .vimspector.json  README.md  gcovr.cfg  meson.build
.github/workflows/: build-lint-test.yml
docs/: mainpage.dox  orpheus.doxygen.in
include/: cxx_fix.hpp  intmath.hpp  orpheus.hpp  orpheus_util.hpp
research/int-sin/: Untitled.ipynb
src/: orpheus.cpp
subprojects/: asciichart.wrap
test/: test_attenuator.cpp  test_inverse.cpp  test_orpheus.cpp  test_sinesource.cpp  test_sum.cpp  test_util.cpp  test_utils.hpp
tools/: auto-lint.sh  lint.sh
